--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aireab</title>
+  <title>Aireb</title>
 </head>
 <body>
-  <h1>Aireab</h1>
+  <h1>Aireb</h1>
 </body>
 </html>
